deploy/hu036-avaluo/paquete/objects/Appraisal.object
<CustomObject>
    <fields>
        <fullName>Multas_Esquelas__c</fullName>
        <label>Multas (esquelas)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pendiente de verificación</fullName>
                    <default>true</default>
                    <label>Pendiente de verificación</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gravamenes__c</fullName>
        <label>Gravámenes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pendiente de verificación</fullName>
                    <default>true</default>
                    <label>Pendiente de verificación</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procesos_Judiciales__c</fullName>
        <label>Procesos judiciales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pendiente de verificación</fullName>
                    <default>true</default>
                    <label>Pendiente de verificación</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_Rechazo__c</fullName>
        <label>Motivo de rechazo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>